--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,13 +1,5 @@
 {{#section 'head'}}
   <link rel="stylesheet" href="css/products.css" />
-  <script>
-    $(function() {
-      $('[data-toggle="tooltip"]').tooltip({
-        trigger: 'hover'
-      });
-    });
-  </script>
-
   <script src="js/expandables.js"></script>
   <script src="libs/modal-video/jquery-modal-video.min.js"></script>
   <link rel="stylesheet" href="libs/modal-video/modal-video.min.css" />
@@ -85,13 +77,17 @@
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#zombie-game-info">
             <div class="product-img-wrapper position-relative shadow">
-              <img src="/images/products/zombie-runner.png" class="product-img img-fluid" alt="Zombie Runner cover image"/>
-            </div>
-            <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-              <a class="mr-2" href="#" target="_blank" title="Go to App Store"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
-              <a href="#" target="_blank" title="Go to Play Store"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+              <img src="/images/products/zombie-runner.png" class="product-img img-fluid" alt="Zombie Runner game cover image"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -124,8 +120,14 @@
                     Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
                     Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
                     <div class="store-buttons-container text-lg-left text-center">
-                      <a class="read-more-btn btn btn-md moon-btn btn-outline-dark"><i class="apple-store store-icon fab fa-apple fa-fw"></i>Download on the App Store</a>
-                      <a class="read-more-btn btn btn-md moon-btn btn-outline-dark ml-md-3 mt-3 mt-md-0"><i class="android-store store-icon fab fa-google-play fa-fw"></i>Download it on Google Play</a>
+                      <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
+                        <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+                        Download on the App Store
+                      </a>
+                      <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
+                        <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+                        Download it on Google Play
+                      </a>
                     </div>
                   </p>
                 </div>
@@ -153,6 +155,14 @@
               <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App1"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#app2">
@@ -160,6 +170,14 @@
               <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App2"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#app3">
@@ -167,6 +185,14 @@
               <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App3"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -210,6 +236,14 @@
               <img src="https://via.placeholder.com/350x200/d4351c.png/fff" class="product-img img-fluid" alt="Software1"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#software2">
@@ -217,6 +251,14 @@
               <img src="https://via.placeholder.com/350x200/d4351c.png/fff" class="product-img img-fluid" alt="Software2"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -248,8 +290,14 @@
                     Draw simple card animations or compose complex prototypes. The best part? Nothing you design is throwaway—Framer outputs animation values that can be used 1:1 in production.
                   </p>
                   <div class="store-buttons-container text-lg-left text-center">
-                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark"><i class="apple-store store-icon fab fa-apple fa-fw"></i>Download on the App Store</a>
-                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0"><i class="android-store store-icon fab fa-google-play fa-fw"></i>Download it on Google Play</a>
+                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
+                      <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+                      Download on the App Store
+                    </a>
+                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
+                      <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+                      Download it on Google Play
+                    </a>
                   </div>
                 </div>
               </div>
@@ -274,10 +322,16 @@
                   <p>
                     Firebase is a platform for creating mobile and web applications developed by Google. It was originally an independent company founded in 2011. In 2014, Google acquired the platform and it is now their flagship offering for app development
                   </p>
-                </div>
-                <div class="store-buttons-container text-center text-lg-left">
-                  <a href="#" title="Go to app store" target="_blank"><img src="images/app-store.png" class="store-img img-fluid" alt="Download on the App Store" /></a>
-                  <a href="#" title="Go to play store" target="_blank"><img src="images/play-store.png" class="store-img img-fluid" alt="Download it on the play store" /></a>
+                  <div class="store-buttons-container text-lg-left text-center">
+                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
+                      <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+                      Download on the App Store
+                    </a>
+                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
+                      <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+                      Download it on Google Play
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -308,6 +362,14 @@
               <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext1"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#ext2">
@@ -315,6 +377,14 @@
               <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext2"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
         <div class="col-md-4">
           <button class="btn-hidden" data-expand="#ext3">
@@ -322,6 +392,14 @@
               <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext3"/>
             </div>
           </button>
+          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
+            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
+              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
+            </a>
+            <a href="#" target="_blank" title="Go to Play Store">
+              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
+            </a>
+          </div>
         </div>
       </div>
     </div>
