Added href and targets to moon buttons

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -120,11 +120,11 @@
                     Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
                     Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
                     <div class="store-buttons-container text-lg-left text-center">
-                      <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
+                      <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
                         <i class="apple-store store-icon fab fa-apple fa-fw"></i>
                         Download on the App Store
                       </a>
-                      <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
+                      <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
                         <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
                         Download it on Google Play
                       </a>
@@ -290,11 +290,11 @@
                     Draw simple card animations or compose complex prototypes. The best part? Nothing you design is throwaway—Framer outputs animation values that can be used 1:1 in production.
                   </p>
                   <div class="store-buttons-container text-lg-left text-center">
-                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
+                    <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
                       <i class="apple-store store-icon fab fa-apple fa-fw"></i>
                       Download on the App Store
                     </a>
-                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
+                    <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
                       <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
                       Download it on Google Play
                     </a>
@@ -323,11 +323,11 @@
                     Firebase is a platform for creating mobile and web applications developed by Google. It was originally an independent company founded in 2011. In 2014, Google acquired the platform and it is now their flagship offering for app development
                   </p>
                   <div class="store-buttons-container text-lg-left text-center">
-                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
+                    <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
                       <i class="apple-store store-icon fab fa-apple fa-fw"></i>
                       Download on the App Store
                     </a>
-                    <a class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
+                    <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
                       <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
                       Download it on Google Play
                     </a>
