--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -20,6 +20,69 @@
   </div>
 </section>
 
-<section class="get-in-touch">
-  Get in Touch
+<section class="get-in-touch p-0">
+    <div class="row no-gutters">
+      <div class="col-md-8">
+        <div class="get-in-touch-form-container">
+          <h3 class="font-weight-light">Get in Touch</h3>
+          <form class="contact-form">
+            <div class="form-group">
+              <!--label for="exampleInputEmail1">Category</label-->
+              <select class="form-control category-dd">
+                <option disabled selected>Category</option>
+                <option value="support">Support</option>
+                <option value="bug">Bug Report</option>
+                <option value="sales">Sales and Payment</option>
+                <option value="feature-request">Feature Request</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+
+            <div class="tell-us-more-container card">
+              <h5 class="card-header font-weight-bold">
+                Tell us more about yourself
+              </h5>
+              <div class="card-body">
+                <div class="form-row">
+                  <div class="form-group col">
+                    <!--label for="firstname">Firstname</label-->
+                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First name" required />
+                  </div>
+                  <div class="form-group col">
+                    <!--label for="surname">Surname</label-->
+                    <input type="text" class="form-control" id="surname" name="surname" placeholder="Surname" required />
+                  </div>
+                </div>
+                <div class="form-group mb-0">
+                  <!--label for="email">Email</label-->
+                  <input type="email" id="email" class="form-control" placeholder="email@example.com" required/>
+                </div>
+              </div>
+            </div>
+
+            <div class="message-container card mt-3">
+              <h5 class="card-header font-weight-bold">
+                Message
+              </h5>
+              <div class="card-body">
+                <div class="form-group mb-0">
+                  <!--label for="email">Email</label-->
+                  <textarea id="message" class="contact-message form-control" placeholder="Your message..." data-gramm_editor="false" rows="4" required></textarea>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group mt-3">
+              <button type="submit" class="btn btn-outline-dark submit-btn moon-btn btn-block">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="socials-container">
+        
+        </div>
+      </div>
+    </div>
 </section>
