--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -81,7 +81,37 @@
 
       <div class="col-md-4">
         <div class="socials-container">
-        
+          <div class="contact-info">
+
+            <div class="info-container mb-3">
+              <i class="contact-icon fas fa-map-marker-alt"></i> 
+              <p>Melbourne, VIC 3001, Australia</p>
+            </div>
+
+            <div class="d-flex flex-column">
+              <div class="info-container">
+                <i class="contact-icon fas fa-envelope"></i>
+                <p>Email us</p>
+              </div>
+              <a class="text-white" href="mailto:admin@dreamlinkstudio.com">admin@dreamlinkstudio.com</a>
+            </div>
+
+          </div>
+
+          <div class="socials mt-5">
+            <h4 class="text-center">Connect with us</h4>
+            <div class="social-links mt-4">
+              <a id="facebook" class="social-bubble shadow" href="https://www.facebook.com" target="_blank">
+                <i class="social-icon fab fa-facebook-f fa-fw"></i>
+              </a>
+              <a id="youtube" class="social-bubble shadow" href="https://www.youtube.com" target="_blank">
+                <i class="social-icon fab fa-youtube fa-fw"></i>
+              </a>
+              <a id="linkedin" class="social-bubble shadow" href="https://www.linkedin.com" target="_blank">
+                <i class="social-icon fab fa-linkedin-in fa-fw"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
