--- a/views/index.hbs
+++ b/views/index.hbs
@@ -296,7 +296,7 @@
 <section class="contact-us">
   <h1 class="display-5 text-center font-weight-light text-capitalize">Get In touch</h1>
   <div class="container pt-4">
-    <form class="form needs-validation" novalidate id="contact-form" name="contact-form">
+    <form action="/sendmail" class="form needs-validation" novalidate id="contact-form" name="contact-form">
       <div class="form-row">
         <div class="form-group col-sm-6 py-0">
           <label class="sr-only" for="input-first-name">First name</label>
