Improved  formatting of email

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -36,7 +36,7 @@
             <div class="form-group">
               <!--label for="exampleInputEmail1">Category</label-->
               <select class="form-control category-dd" name="category" required>
-                <option disabled selected>Category</option>
+                <option value="" disabled selected>Category</option>
                 <option value="Support">Support</option>
                 <option value="Bug">Bug Report</option>
                 <option value="Sales">Sales and Payment</option>
