changed breakpoints for responsiveness to be lg

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -29,7 +29,7 @@
 
 <section class="get-in-touch p-0">
     <div class="row no-gutters">
-      <div class="col-md-8">
+      <div class="col-lg-8">
         <div class="get-in-touch-form-container">
           <h3 class="font-weight-light">Get in Touch</h3>
           <form action="/contact-form" id="contact-form" class="form needs-validation contact-form" novalidate>
@@ -86,7 +86,7 @@
         </div>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-lg-4">
         <div class="socials-container">
           <div class="contact-info">
 
