--- a/public/css/fixed.css
+++ b/public/css/fixed.css
@@ -42,7 +42,7 @@ margin-right: 0px!important;
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
+  background-size: 100%;
   background-position: center center;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
