--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,21 +24,22 @@
 <section class="hero-img container-fluid p-0">
   <!-- Start hero image -->
   <div class="landing">
+    <div class="caption text-center">
+      <h1 class="display-4 font-weight-bold">Dreamlink Studio</h1>
+      <h3>Linking our dreams with reality</h3>
+    </div>
+
+    <div class="scroll-down-container text-center">
+      <button class="scroll-down-btn" data-scroll="true" data-to=".what-we-do">
+        <i class="fas fa-chevron-down"></i>
+      </button>
+    </div>
+
     <div class="home-wrap">
       <div class="home-inner"></div>
     </div>
   </div>
 
-  <div class="caption text-center">
-    <h1 class="display-4 font-weight-bold">Dreamlink Studio</h1>
-    <h3>Linking our dreams with reality</h3>
-  </div>
-
-  <div class="scroll-down-container text-center">
-    <button class="scroll-down-btn" data-scroll="true" data-to=".what-we-do">
-      <i class="fas fa-chevron-down"></i>
-    </button>
-  </div>
   <!-- End hero image -->
 </section>
 
@@ -49,7 +50,7 @@
     <p>We deliver and produce high qualitty applications. Our focus is on games but we plan on expanding our applications to cover general purpose software. Our team focuse on three core values, quality, creativity and innovation. These core ideas act as the core building blocks for our applications and software. This allows our applications and software unique, and unlike any other technologies out there.</p>  
   </div-->
 
-  <div class="container-fluid p-5 mt-3">
+  <div class="value-box-container container-fluid p-5 mt-3">
     <div class="row">
       <div class="col-lg-4">
         <div class="value-box" id="quality-box">
