--- a/public/css/fixed.css
+++ b/public/css/fixed.css
@@ -25,7 +25,6 @@ margin-right: 0px!important;
   width: 100%;
   height: 100vh;
   display: table;
-  z-index: -1;
 }
 .home-wrap {
   clip: rect(0, auto, auto, 0);
@@ -42,7 +41,8 @@ margin-right: 0px!important;
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-position: center center;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
@@ -75,4 +75,14 @@ margin-right: 0px!important;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
   will-change: transform;
+}
+
+@media(max-width: 768px) {
+  .landing {
+    height: 50vh;
+  }
+
+  .home-inner {
+    position: relative;
+  }
 }
