--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -25,7 +25,7 @@
 
   <!-- Site JS -->
   <script> // Handlebars vars to JS (ie: server to client)
-    const noshrink = {{or noshrink false}};
+    let noshrink = {{or noshrink false}};
   </script>
 
   <script src="js/nav.js"></script>
@@ -53,21 +53,21 @@
             <img src="images/logo.png" id="logo" alt="Dreamlink Studio Logo" />
           </a>
           <button type="button" class="navbar-toggler outline-none" data-toggle="collapse" data-target="#navbarSupportedContent">
-            <span class="text-white navbar-toggler-icon"></span>
+            <i class="text-dark fas fa-bars"></i>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active px-3">
+              <li class="nav-item px-3 {{#ifEquals title "Home" }}active{{/ifEquals}}">
                 <a href="/" class="nav-link">Home</a>
               </li>
-              <li class="nav-item px-3">
+              <li class="nav-item px-3 {{#ifEquals title "About" }}active{{/ifEquals}}">
                 <a href="about" class="nav-link">About Us</a>
               </li>
-              <li class="nav-item px-3">
+              <li class="nav-item px-3 {{#ifEquals title "Products" }}active{{/ifEquals}}">
                 <a href="products" class="nav-link">Products</a>
               </li>
-              <li class="nav-item px-3">
+              <li class="nav-item px-3 {{#ifEquals title "Contact" }}active{{/ifEquals}}">
                 <a href="contact" class="nav-link">Contact</a>
               </li>
             </ul>
