--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -82,10 +82,10 @@
 
   <footer class="footer">
     <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/products">Products</a></li>
+      <li><a href="/contact">Contact</a></li>
     </ul>
     <p>
       <i class="fas fa-moon mr-1"></i> &copy; 2020 Dreamlink Studio</p>
