Fixed youtube thumbnails for Safari

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -106,7 +106,7 @@
             <div class="row">
               <div class="col-lg">
                 <div class="video-thumbnail position-relative text-center">
-                  <img src="https://i.ytimg.com/vi/DS15qFLy9RQ/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBg2fRu6TaKWQG4xInunExZbR1i8Q" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                  <img src="https://img.youtube.com/vi/DS15qFLy9RQ/mqdefault.jpg" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
                   <button class="video-popup-btn" data-video-id="DS15qFLy9RQ">
                     <i class="fas fa-play"></i>
                   </button>
@@ -277,7 +277,7 @@
             <div class="row">
               <div class="col-lg">
                 <div class="video-thumbnail position-relative text-center">
-                  <img src="https://i.ytimg.com/vi/4FXRmkdt3_8/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBWkAYkZy76TjceBP-HAjZKz1AFsA" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                  <img src="https://img.youtube.com/vi/4FXRmkdt3_8/mqdefault.jpg" class="img-fluid" alt="Framer IO YouTube Thumbnail"/>
                   <button class="video-popup-btn" data-video-id="4FXRmkdt3_8">
                     <i class="fas fa-play"></i>
                   </button>
@@ -311,7 +311,7 @@
             <div class="row">
               <div class="col-lg">
                 <div class="video-thumbnail position-relative text-center">
-                  <img src="https://i.ytimg.com/vi/9kRgVxULbag/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCobYSKTKWX9O1VSLIZJ945B75tUQ" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                  <img src="https://img.youtube.com/vi/9kRgVxULbag/mqdefault.jpg" class="img-fluid" alt="Firebase YouTube Thumbnail"/>
                   <button class="video-popup-btn" data-video-id="9kRgVxULbag">
                     <i class="fas fa-play"></i>
                   </button>
